--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,47 +1,7 @@
-@import "./base.css";
-
-html,
-body {
-  height: 100%;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
-  background-color: #f5f5f5;
-}
-
-.form-signin {
-  max-width: 330px;
-  padding: 15px;
-}
-
-.form-signin .form-floating:focus-within {
-  z-index: 2;
-}
-
-.form-signin input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.form-signin img {
-  display: block;
-  margin: auto;
-}
-
-.form-signin h1 {
-  display: block;
-  text-align: center;
-}
-
-#app {
-  width: 100%;
-  height: 100%;
-  user-select: none;
+    @apply bg-primary-900;
 }
